# bigdata-labs

./: .env.default  README.md  docker-compose-deploy.yaml
consumer/: config.py  pyproject.toml
consumer/templates/: index.html
lab1/: docker-compose-local.yaml
lab1/consumer/: config.py  pyproject.toml
lab1/producer/: config.py  main.py  pyproject.toml
lab2/: Makefile  README.md  docker-compose-deploy.yaml  docker-compose-local.yaml
lab2/consumer/: Dockerfile  config.py  main.py  pyproject.toml
lab2/consumer/app/: api.py  consumer_app.py  models.py
lab2/consumer/services/: signal.py  websocket_manager.py
lab2/consumer/templates/: index.html
lab2/producer/: config.py  main.py  pyproject.toml
producer/: Dockerfile  config.py  pyproject.toml
