[tool.poetry]
name = "bigdata-labs-consumer"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
aiokafka = "^0.8.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
websockets = "^11.0.3"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
